# picsumrs

./: Cargo.toml  README.md
src/: cli.rs  config.rs  downloader.rs  error.rs  main.rs  picsum.rs  progress.rs  utils.rs
